<resources>
    <string name="app_name">Passenger Information List</string>
    <string name="headline">PIL APP</string>
    <string name="placeholder">0</string>

    <!-- login screen //-->
    <string name="login_id">Personal ID</string>
    <string name="login_std_id">a12345</string>
    <string name="login_pw">Password</string>
    <string name="login_std_pw">password</string>
    <string name="login_button">CONTINUE</string>

    <!-- flight selection screen //-->
    <string name="fs_dep">DEP</string>
    <string name="fs_std_dep">FRA</string>
    <string name="fs_arr">ARR</string>
    <string name="fs_std_arr">IAD</string>
    <string name="fs_fltNo">FLT NO</string>
    <string name="fs_std_fltNo">LH418</string>
    <string name="fs_date">DATE</string>
    <string name="fs_meta">META</string>
    <string name="fs_restrict">RESTRICTED</string>
    <string name="fs_conf">CONFIDENTIAL</string>
    <string name="fs_loggedIn">logged in as:</string>

    <!-- pil display screen //-->
    <string name="pil_bookingNo">Booking Numbers</string>
    <string name="pil_act">act</string>
    <string name="pil_max">max</string>
    <string name="pil_separator">/</string>
    <string name="pil_f">First</string>
    <string name="pil_c">Business</string>
    <string name="pil_e">Premium Economy</string>
    <string name="pil_y">Economy</string>
    <string name="pil_ttl">Total</string>

</resources>
