<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="pil.apps.saplshowcase.pil.FlightSelectionActivity">

    <TextView
        android:id="@+id/userDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/fs_loggedIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/userDisplay"
        android:layout_marginRight="10dp" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/headline"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="250dp"
        android:layout_height="195dp"
        android:layout_marginTop="25dp"
        android:background="#66ffffff"
        android:padding="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TableRow
            android:layout_width="222dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fs_dep" />

            <EditText
                android:id="@+id/selDepAp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="3"
                android:singleLine="true"
                android:text="@string/fs_std_dep"
                android:textAlignment="center"
                android:textAllCaps="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fs_arr" />

            <EditText
                android:id="@+id/selArrAp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="3"
                android:singleLine="true"
                android:text="@string/fs_std_arr"
                android:textAlignment="center"
                android:textAllCaps="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:text="@string/fs_fltNo" />

            <EditText
                android:id="@+id/selFltNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="5"
                android:singleLine="true"
                android:text="@string/fs_std_fltNo"
                android:textAlignment="center"
                android:textAllCaps="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fs_date" />

            <EditText
                android:id="@+id/selDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:focusable="false"
                android:inputType="date"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="#aaffffff"
        android:onClick="showMetaPil"
        android:text="@string/fs_meta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="#aaffffff"
        android:onClick="showReducedPil"
        android:text="@string/fs_restrict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginTop="6dp"
        android:background="#ffffff"
        android:onClick="showFullPil"
        android:text="@string/fs_conf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />


</android.support.constraint.ConstraintLayout>
