<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pil.apps.saplshowcase.pil.PilDisplayActivity">


    <TableRow
        android:id="@+id/metadata"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/phDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/phFltNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/phRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/phAcType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat" />


    </TableRow>

    <TableLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metadata"
        android:layout_marginLeft="8dp">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pil_bookingNo" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pil_act" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pil_max" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pil_f"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/phFAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/pil_separator"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/phFMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pil_c"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/phCAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/pil_separator"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/phCMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pil_e"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/phEAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/pil_separator"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/phEMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pil_y"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/phYAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/pil_separator"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/phYMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Space
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pil_ttl"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/phTtlAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingStart="0dp"
                android:text="@string/pil_separator"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/phTtlMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </TableRow>

    </TableLayout>

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#8f8f8f"
        app:layout_constraintTop_toTopOf="@+id/paxList" />

    <ListView
        android:id="@+id/paxList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainContainer" />

</android.support.constraint.ConstraintLayout>
